GNU tar NEWS - User visible changes. 2023-08-02
Please send GNU tar bug reports to <bug-tar@gnu.org>

version TBD

* New manual section "Reproducibility", for reproducible tarballs.

* New options: --set-mtime-command and --set-mtime-format

Both options are valid when archiving files.

** --set-mtime-command=COMMAND

For each FILE being archived, run "COMMAND FILE", parse its
output as time string and set mtime value of the archive member
from the result.

Unless --set-mtime-format is also used, the output is parsed
as argument to --mtime option (see GNU tar manual, chapter 4
"Date input formats".

** --set-mtime-format=FMT

Defines output format for the COMMAND set by the above option.  If
used, command output will be parsed using strptime(3).

* Bug fixes

** tar no longer uses alloca, fixing an unlikely stack overflow.


version 1.35 - Sergey Poznyakoff, 2023-07-18

* Fail when building GNU tar, if the platform supports 64-bit time_t
  but the build uses only 32-bit time_t.

* Leave the devmajor and devminor fields empty (rather than zero) for
  non-special files, as this is more compatible with traditional tar.

* Bug fixes

** Fix interaction of --update with --wildcards.

** When extracting archives into an empty directory, do not create
   hard links to files outside that directory.

** Handle partial reads from regular files.

** Warn "file changed as we read it" less often.
   Formerly, tar warned if the file's size or ctime changed.
   However, this generated a false positive if tar read a file
   while another process hard-linked to it, changing its ctime.
   Now, tar warns if the file's size, mtime, user ID, group ID,
   or mode changes.  Although neither heuristic is perfect,
   the new one should work better in practice.

** Fix --ignore-failed-read to ignore file-changed read errors
   as far as exit status is concerned.  You can now suppress file-changed
   issues entirely with --ignore-failed-read --warning=no-file-changed.
