@@ -1,0 +1,43 @@
+# Test suite for GNU tar.                             -*- autotest -*-
+# Copyright 2022-2023 Free Software Foundation, Inc.
+#
+# This file is part of GNU tar.
+#
+# GNU tar is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# GNU tar is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+AT_SETUP([extract a large directory tree with --delay-directory-restore])
+AT_KEYWORDS([extract extrac26])
+
+AT_TAR_CHECK([
+AT_SKIP_LARGE_FILES
+AT_TIMEOUT_PREREQ
+
+echo Creating dirtree
+awk 'BEGIN { for (j = 0; j < 300; j++) for (k = 0; k < 300; k++) print "dirtree/" j "/" k }' | \
+  xargs mkdir -p
+
+echo Creating archive
+tar -cf archive.tar dirtree
+
+echo Extracting archive
+mkdir output
+timeout 15 tar -xf archive.tar --delay-directory-restore -C output
+],
+[0],
+[Creating dirtree
+Creating archive
+Extracting archive
+],
+[],[],[],[gnu])
+
+AT_CLEANUP
