@@ -349,6 +349,7 @@ m4_include([extrac22.at])
 m4_include([extrac23.at])
 m4_include([extrac24.at])
 m4_include([extrac25.at])
+m4_include([extrac26.at])
 
 m4_include([backup01.at])
 
